Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPntuOLOFl9Z+tT39SJEqcc",
+      "authorship_tag": "ABX9TyNWgqJ9Dh7NFOJZPwRN/j9H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1029,7 +1029,7 @@
         },
         "outputId": "449d6043-c08f-4039-ec0c-5a9d74a55abe"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
         "id": "LMU0KbX9Fpjc",
         "outputId": "a61d57bd-db67-4f23-af2f-2f8313be90d9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1077,7 +1077,7 @@
       "metadata": {
         "id": "qOLrj-J-FyWk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1092,7 +1092,7 @@
         "id": "tICC_Z2BF8pE",
         "outputId": "38caad7a-009c-4c29-91fd-84c313be349c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1119,7 +1119,7 @@
         "id": "rHtO7c6rF9lh",
         "outputId": "44a8271c-81ac-459f-d7ed-9df04c800556"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1145,7 +1145,7 @@
         "id": "DesDmKHrGD7l",
         "outputId": "0112f5de-a0cc-40e5-fe33-ad70e28476a6"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1172,7 +1172,7 @@
         "id": "stcMvO4OGGH1",
         "outputId": "287d2657-1404-49ad-a838-6541bf96e9fc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1198,7 +1198,7 @@
         "id": "JJBToZbHIlkN",
         "outputId": "e6b80139-3794-47cf-dd93-111ba0dc9378"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1224,7 +1224,7 @@
         "id": "draay-x9In1v",
         "outputId": "61f8f1fa-3b77-4810-b1a2-b5befa022765"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1253,7 +1253,7 @@
         "id": "SWpCZWdiIpRf",
         "outputId": "fd5114c2-6507-487b-8eea-5f6f5440c475"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1281,7 +1281,7 @@
         "id": "gj-OeXquJIG5",
         "outputId": "82051d22-5616-4667-81e5-540b6f462d72"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1310,7 +1310,7 @@
         "id": "3XSutsg8JMlf",
         "outputId": "f0664eb9-3184-423d-c519-8e0511fb04f5"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1341,7 +1341,7 @@
         "id": "qSn93AoOJRCf",
         "outputId": "a64efc76-e3a4-4a6f-9b30-d7006ab465aa"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1354,6 +1354,43 @@
           "execution_count": 14
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests  \n",
+        "r = requests.get('http://www.google.co.kr')\n",
+        "r.status_code"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2izmz7r4ItJx",
+        "outputId": "bc0c66ac-4d55-4de5-9162-ce70b0428468"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3jPcgZ2NIx-u"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
