Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNWgqJ9Dh7NFOJZPwRN/j9H",
+      "authorship_tag": "ABX9TyNEnnA47Ce4S4zuN6EC45ae",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1363,13 +1363,13 @@
         "r.status_code"
       ],
       "metadata": {
+        "id": "2izmz7r4ItJx",
+        "outputId": "bc0c66ac-4d55-4de5-9162-ce70b0428468",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "2izmz7r4ItJx",
-        "outputId": "bc0c66ac-4d55-4de5-9162-ce70b0428468"
+        }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1385,12 +1385,117 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import urllib.request\n",
+        "response = urllib.request.urlopen('http://www.google.co.kr')\n",
+        "response.status"
+      ],
       "metadata": {
-        "id": "3jPcgZ2NIx-u"
+        "id": "3jPcgZ2NIx-u",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "907e99b1-c2cd-469e-86c3-da74ad73dd27"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import urllib.request as r    # urllib 패키지의 request 모듈을 가져오면서 이름을 r로 지정\n",
+        "response = r.urlopen('http://www.google.co.kr')    # r로 urlopen 함수 사용\n",
+        "response.status"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ejaLxy_ZSmNA",
+        "outputId": "b7369c3c-86f2-4364-9cb4-195f7e17a4ca"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "200"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from math import ceil,floor\n",
+        "x=1.5\n",
+        "\n",
+        "print(ceil(x),floor(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rZIIyo8yTGeX",
+        "outputId": "f7ba05ac-bc3a-4c00-9d48-be3a0ef90c29"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math \n",
+        "#원의 넓이 : r*r*3.14\n",
+        "#원의 둘레 : 2*r*3.14\n",
+        "\n",
+        "r=float(input(\"반지름을 일력해주세요. \\n\"))\n",
+        "print(f\"원의 넓이: {r*r*3.14}\")\n",
+        "print(f\"원의 둘레: {2*r*3.14}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GYDdYEvqTOlw",
+        "outputId": "f5cb571c-bebb-4288-99d1-e26061fcc1f6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "반지름을 일력해주세요. \n",
+            "5\n",
+            "원의 넓이: 78.5\n",
+            "원의 둘레: 31.400000000000002\n"
+          ]
+        }
+      ]
     }
   ]
 }
