--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEnnA47Ce4S4zuN6EC45ae",
+      "authorship_tag": "ABX9TyNDrHOqLzG/RHgEeI/XPpNt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1397,7 +1397,7 @@
         },
         "outputId": "907e99b1-c2cd-469e-86c3-da74ad73dd27"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1425,7 +1425,7 @@
         "id": "ejaLxy_ZSmNA",
         "outputId": "b7369c3c-86f2-4364-9cb4-195f7e17a4ca"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1454,7 +1454,7 @@
         "id": "rZIIyo8yTGeX",
         "outputId": "f7ba05ac-bc3a-4c00-9d48-be3a0ef90c29"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1483,7 @@
         "id": "GYDdYEvqTOlw",
         "outputId": "f5cb571c-bebb-4288-99d1-e26061fcc1f6"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1496,6 +1496,36 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "def 데코레이터이름(func):    # 데코레이터는 호출할 함수를 매개변수로 받음\n",
+        "    def wrapper():           # 호출할 함수를 감싸는 함수\n",
+        "        func()               # 매개변수로 받은 함수를 호출\n",
+        "    return wrapper           # wrapper 함수 반환\n",
+        " \n",
+        "@데코레이터                  # 데코레이터 지정\n",
+        "def 함수이름():\n",
+        "    코드\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "Z_Sk9wNK3We6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "w9PHttLf3TPc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
