Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNDrHOqLzG/RHgEeI/XPpNt",
+      "authorship_tag": "ABX9TyPsyzR3vQv94rnA6hJ+TvdQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1520,9 +1520,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "for i in range(6):\n",
+        "  print(i+1,\"내일시험\")"
+      ],
+      "metadata": {
+        "id": "w9PHttLf3TPc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "504a43a7-4d8a-4cf9-be7c-103e0a22ef9d"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 내일시험\n",
+            "2 내일시험\n",
+            "3 내일시험\n",
+            "4 내일시험\n",
+            "5 내일시험\n",
+            "6 내일시험\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "w9PHttLf3TPc"
+        "id": "ShLmNwoLUpVQ"
       },
       "execution_count": null,
       "outputs": []
