Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPsyzR3vQv94rnA6hJ+TvdQ",
+      "authorship_tag": "ABX9TyOLSyDLfBJWqwl/MjxXHAPG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1525,36 +1525,30 @@
         "  print(i+1,\"내일시험\")"
       ],
       "metadata": {
-        "id": "w9PHttLf3TPc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "504a43a7-4d8a-4cf9-be7c-103e0a22ef9d"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1 내일시험\n",
-            "2 내일시험\n",
-            "3 내일시험\n",
-            "4 내일시험\n",
-            "5 내일시험\n",
-            "6 내일시험\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ShLmNwoLUpVQ"
+        "id": "w9PHttLf3TPc"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 함수의 매개변수와 반환값을 처리할 때는 wrpper함수의 매개변수를 호출할 함수의 매개변수와 똑같이 지정하고,func에 매개변수를 넣어서 호출하고 반환하면 됩니다. \n",
+        "\n",
+        "```\n",
+        "def 데코레이터이름(func):\n",
+        "  def wrapper(매개변수1,매개변수2):\n",
+        "    return func(매개변수1,매개변수2)\n",
+        "\n",
+        "@데코레이터\n",
+        "def 함수이름(매개변수1,매개변수2):\n",
+        "  코드\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "sdKr_QYmkbi4"
+      }
     }
   ]
 }
