Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOLSyDLfBJWqwl/MjxXHAPG",
+      "authorship_tag": "ABX9TyPbAv7NeVlxQEKYoNkvf99s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1549,6 +1549,65 @@
       "metadata": {
         "id": "sdKr_QYmkbi4"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "매개변수가 있는 데코레이터\n",
+        "\n",
+        "매개변수가 있는 데코레이터는 값을 지정해서 동작을 바꿀 수 있습니다. 이때는 데코레이터가 사용할 매개변수를 지정하고, 실제 데코레이터 역할을 하는 real_decorator 함수를 만듭니다. 그다음에 real_decorator 함수 안에서 wrapper 함수를 만들어줍니다.\n",
+        "\n",
+        "```\n",
+        "def 데코레이터이름(매개변수):                    # 데코레이터가 사용할 매개변수를 지정\n",
+        "    def real_decorator(func):                    # 호출할 함수를 매개변수로 받음\n",
+        "        def wrapper(매개변수1, 매개변수2):       # 호출할 함수의 매개변수와 똑같이 지정\n",
+        "            return func(매개변수1, 매개변수2)    # func를 호출하고 반환값을 반환\n",
+        "        return wrapper                           # wrapper 함수 반환\n",
+        "    return real_decorator                        # real_decorator 함수 반환\n",
+        " \n",
+        "@데코레이터(인수)                                # 데코레이터를 지정하면서 인수를 넣음\n",
+        "def 함수이름(매개변수1, 매개변수2):\n",
+        "    코드\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9JxfDjYM5kbX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "클래스로 데코레이터 만들기\n",
+        "\n",
+        "클래스로 데코레이터를 만들 때는 인스턴스를 함수처럼 호출하게 해주는 __call__ 메서드를 구현하고, __call__ 메서드에서 호출할 함수의 매개변수를 처리해줍니다.\n",
+        "```\n",
+        "class 데코레이터이름:\n",
+        "    def __init__(self, func):    # 호출할 함수를 인스턴스의 초깃값으로 받음\n",
+        "        self.func = func         # 호출할 함수를 속성 func에 저장\n",
+        " \n",
+        "    def __call__(self, 매개변수1, 매개변수2):     # __call__에서 호출할 함수의 매개변수 처리\n",
+        "        return self.func(매개변수1, 매개변수2)    # self.func에 매개변수를 넣어서 호출하고\n",
+        "                                                  # 반환값을 반환\n",
+        "@데코레이터                      # 데코레이터 지정\n",
+        "def 함수이름(매개변수1, 매개변수2):\n",
+        "    코드\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3KlNY4G_OlBX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1etTrQam5mwf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
