Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPbAv7NeVlxQEKYoNkvf99s",
+      "authorship_tag": "ABX9TyNGi4sz61Qj3AXjDanMjqjU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1602,12 +1602,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "bin(0b1101 & 0b1001)"
+      ],
       "metadata": {
-        "id": "1etTrQam5mwf"
+        "id": "1etTrQam5mwf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "8361a6d1-9a57-4278-8ded-3d334e0b1462"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0b1001'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "13 & 9"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "94RAERrXPNNv",
+        "outputId": "b1256471-b8ce-4b31-fb5c-90a72e3b9465"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     }
   ]
 }
