Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGi4sz61Qj3AXjDanMjqjU",
+      "authorship_tag": "ABX9TyOKaP4tw0YuYHqGs02AuqNH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1613,7 +1613,7 @@
         },
         "outputId": "8361a6d1-9a57-4278-8ded-3d334e0b1462"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1642,7 +1642,7 @@
         "id": "94RAERrXPNNv",
         "outputId": "b1256471-b8ce-4b31-fb5c-90a72e3b9465"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1653,6 +1653,62 @@
           },
           "metadata": {},
           "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bin(0b1101 & 0b1001)    # 비트 AND"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "5RrHNIgsZuyE",
+        "outputId": "423604ed-b110-46cc-a5e0-189d74dd911c"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0b1001'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "0b0011 << 2    # 비트를 왼쪽으로 2번 이동"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cj1cCF4uZ27i",
+        "outputId": "5095b5ed-53d3-4a2e-e37d-681f28a74748"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
