Colaboratory를 통해 생성됨

--- a/Codingdojang12.ipynb
+++ b/Codingdojang12.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKaP4tw0YuYHqGs02AuqNH",
+      "authorship_tag": "ABX9TyNe2yWZaKUKhg5LYTyu6Vtu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1669,7 +1669,7 @@
         "id": "5RrHNIgsZuyE",
         "outputId": "423604ed-b110-46cc-a5e0-189d74dd911c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1698,7 +1698,7 @@
         "id": "cj1cCF4uZ27i",
         "outputId": "5095b5ed-53d3-4a2e-e37d-681f28a74748"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1711,6 +1711,38 @@
           "execution_count": 2
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"END\")"
+      ],
+      "metadata": {
+        "id": "-k1EIQ4GjVON",
+        "outputId": "f1149b57-5897-4ac9-8c20-9c4ca2fd53a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "END\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Hnh7x5ZajXVA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
