Colaboratory를 통해 생성됨

--- a/Code_up.ipynb
+++ b/Code_up.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxJckdtCiI2TxRi1EAtsQP",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN0gz00Sl/5/oDlr6SzM/M1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +44,7 @@
         "id": "qno04fpxRdFn",
         "outputId": "d8e4a875-3c1e-42c4-a3b2-39d1b9ab31ed"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +74,7 @@
         "id": "8CBqsI9aRtHj",
         "outputId": "32435a40-4b10-4707-9861-bed79400fd5a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +103,7 @@
         "id": "VZqiLdGcR7nt",
         "outputId": "2937b07c-9e6f-4756-cf3d-47222ca03e9b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +131,7 @@
         "id": "HQV5evnnSVqL",
         "outputId": "8fec146e-1329-400d-9f7e-08b648861a43"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -188,6 +189,207 @@
       "metadata": {
         "id": "JSObgAGvRWqi"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 6015~"
+      ],
+      "metadata": {
+        "id": "aD4Nta07PfTH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = input().split()\n",
+        "a=int(a)\n",
+        "b=int(b)\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6gtSjIZ8Pdz5",
+        "outputId": "3ad1920a-2d3a-40a5-ba2c-6a6ce42688a8"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 4\n",
+            "5\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = input().split()\n",
+        "a=str(a)\n",
+        "b=str(b)\n",
+        "print(b,a)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8f9Q-fMgP2tO",
+        "outputId": "171a0722-1988-41f0-d5df-5b9f717d2fa5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "r k\n",
+            "k r\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input()\n",
+        "print(s, s, s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fpEGUrD0QhW-",
+        "outputId": "fd1b9980-19e2-460b-b276-880242527dbe"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "computer science\n",
+            "computer science computer science computer science\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b = input().split(':')\n",
+        "print(a, b, sep=':')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o1VidFw8R4Bu",
+        "outputId": "4958e7a0-9575-49e5-8a9c-8df2f4a8ed90"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6:7\n",
+            "6:7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y, m, d = input().split('.')\n",
+        "print(d, m, y, sep='-')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yynn3rXoSCQX",
+        "outputId": "d1253cac-60fa-4c16-cf7b-8fba1ecb2053"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6.7.8\n",
+            "8-7-6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a,b = input().split('-')\n",
+        "print(a,b,sep=\"\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jniVB4_KSCJ1",
+        "outputId": "e2580beb-4bee-4ec1-d0b9-ea6bd3d9641e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "000907-1121112\n",
+            "0009071121112\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6020까지"
+      ],
+      "metadata": {
+        "id": "nGB6IkR_TCWF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = input()\n",
+        "print(\"\\n\".join(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q_ae-pJdFJFo",
+        "outputId": "d0a88e05-155a-4330-9e5d-17a6caff0109"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ㅇㅎㄹ\n",
+            "ㅇ\n",
+            "ㅎ\n",
+            "ㄹ\n"
+          ]
+        }
+      ]
     }
   ]
 }
